tests/NormalTests/paczka1/small_fuzzy/27400530.err
Error in line 1: A835 A810 44,6
Error in line 9: dEkQh A865 379,8
Error in line 12: cjBHTR0fRKQ S342 50,6
Error in line 13: cjBHTR0fRKQ A835 44,9
